# minimalist-api

./: .env  Cargo.toml  README.md  dev.sqlite  dev.sqlite-shm  dev.sqlite-wal  sqlx-data.json
.github/workflows/: npm.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.jsx
frontend/src/components/: DisappearingToast.jsx  Ticket.jsx  TicketCreate.jsx  TicketView.jsx
src/: api.rs  main.rs
src/api/: error.rs  tickets.rs
