[package]
name = "minimalist-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "macros" ] }
tokio = { version = "1.28", features = [ "full" ] }
dotenvy = "0.15"
anyhow = "1.0"
mime = "0.3"